<resources>
    <string name="app_name">Mp3 Music Download</string>

    <!-- IntroActivity -->
    <string name="progress_text">Updating preferences...</string>

    <!-- EnterActivity -->
    <string name="next">Next</string>
    <string name="open_application">Open Application</string>
    <string name="enter_text_first">Explore Music</string>
    <string name="enter_text_second">Listen Greatest Songs</string>
    <string name="enter_text_third">Music In Your Pocket</string>

    <!-- MainActivity -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_cover">song_cover</string>
    <string name="download">download</string>
    <string name="play">play</string>
    <string name="search">search</string>
    <string name="search_hint">Type…</string>
    <string name="report_complete_message">Report was successfully sent</string>
    <string name="download_error_message">Something went wrong. Please try again</string>
    <string name="rate">rate</string>
    <string name="send">send</string>
    <string name="app_redirection">Download new app with free music</string>
    <string name="menu_policy">Policy</string>
    <string name="report">Report this</string>
    <string name="license">License</string>
    <string name="full_name">Full Name</string>
    <string name="message">Message</string>
    <string name="apk_name">MusicDownloader</string>
    <string name="download_process">Download</string>
    <string name="download_complete">Download complete</string>
    <string name="download_progress">Download</string>
</resources>
